<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="limeandlemon.knowyourtimeline.Profile"
    android:background="@color/color3aqua">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imgBack"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <FrameLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@color/color1aqua"
                android:layout_marginBottom="5dp"
                android:focusable="false"
                android:paddingBottom="3dp"
                android:layout_margin="5dp"
                android:id="@+id/frame1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jugar"
                    android:id="@+id/bntJugar"
                    android:textSize="32dp"
                    android:background="@drawable/selector_button_menu"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/text" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@color/color1aqua"
                android:layout_marginBottom="5dp"
                android:focusable="false"
                android:paddingBottom="3dp"
                android:layout_margin="5dp"
                android:id="@+id/frame2">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clasificacion"
                    android:id="@+id/btnClasificacion"
                    android:layout_gravity="center"
                    android:textSize="32dp"
                    android:background="@drawable/selector_button_menu"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/text" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/frame3"
                android:background="@color/color1aqua"
                android:layout_marginBottom="5dp"
                android:focusable="false"
                android:paddingBottom="3dp"
                android:layout_margin="5dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opciones"
                    android:id="@+id/btnOpciones"
                    android:layout_gravity="center"
                    android:textSize="32dp"
                    android:background="@drawable/selector_button_menu"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/text" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/frame4"
                android:background="@color/color1aqua"
                android:layout_marginBottom="5dp"
                android:focusable="false"
                android:paddingBottom="3dp"
                android:layout_margin="5dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salir"
                    android:id="@+id/btnSalir"
                    android:layout_gravity="center"
                    android:textSize="32dp"
                    android:background="@drawable/selector_button_menu"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/text" />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/imgBack"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@color/color1aqua"
        android:layout_alignBottom="@+id/iv_photoUser" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout"
        android:background="@color/color2aqua"
        android:textSize="40sp"
        android:textColor="@color/text"
        android:text="@string/app_name"
        android:gravity="center"
        android:id="@+id/txtName"></TextView>

    <util.CircularImageView
        app:border="true"
        app:border_color="@color/text"
        app:border_width="2dp"
        app:shadow="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/iv_photoUser"
        android:src="@drawable/photo_user_no"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff530001"
        android:layout_marginBottom="5dp"
        android:focusable="false"
        android:paddingBottom="3dp"
        android:layout_margin="5dp"
        android:id="@+id/frameLayout4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogout"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/logouttwitter"
            android:background="@drawable/button_gplus_bg"
            android:layout_marginBottom="3dp"
            android:textColor="@color/text" />
    </FrameLayout>

</RelativeLayout>
